wier/force-app/main/default/objects/COA__c/COA__c.object-meta.xml
<CustomObject>
    <description>Customer_Order_Acknowledgement</description>
    <label>Customer Order Acknowledgement</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Ref.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Order Acknowledgement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>