wier/force-app/main/default/objects/COA__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments (if any)</label>
    <type>TextArea</type>
</CustomField>