wier/force-app/main/default/objects/COA__c/fields/CSR_Email__c.field-meta.xml
<CustomField>
    <fullName>CSR_Email__c</fullName>
    <formula>opportunity__r.Customer__r.Customer_Service_Representative__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Email</label>
    <type>Text</type>
</CustomField>