wier/force-app/main/default/objects/COA__c/fields/CSR_Email_Field__c.field-meta.xml
<CustomField>
    <fullName>CSR_Email_Field__c</fullName>
    <label>CSR Email Field</label>
    <type>Email</type>
</CustomField>