wier/force-app/main/default/objects/COA__c/fields/Customer_Document_Referece__c.field-meta.xml
<CustomField>
    <fullName>Customer_Document_Referece__c</fullName>
    <formula>Customer_PO1__r.Customer_document_reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Document Referece</label>
    <type>Text</type>
</CustomField>