wier/force-app/main/default/objects/COA__c/fields/Customer_Document_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Document_Reference__c</fullName>
    <label>Customer Document Reference</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>