wier/force-app/main/default/objects/COA__c/fields/Customer_PO1__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer PO #</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PO_Attachments__c.Opportunity__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PO_Attachments__c</referenceTo>
    <relationshipLabel>Customer Order Acknowledgement</relationshipLabel>
    <relationshipName>Customer_Order_Acknowledgement</relationshipName>
    <type>Lookup</type>
</CustomField>