wier/force-app/main/default/objects/COA__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <label>Delivery Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CFR - Cost &amp; Freight</fullName>
            </value>
            <value>
                <fullName>CIF - CIF</fullName>
            </value>
            <value>
                <fullName>CIP - Carriage&amp;Ins paid</fullName>
            </value>
            <value>
                <fullName>CPT - Carr Paid To</fullName>
            </value>
            <value>
                <fullName>DAF - Delivered A Fr</fullName>
            </value>
            <value>
                <fullName>DAP - Delivered at Place</fullName>
            </value>
            <value>
                <fullName>DDP - Del. Duty Paid</fullName>
            </value>
            <value>
                <fullName>DDU - Del Duty Unpaid</fullName>
            </value>
            <value>
                <fullName>DDW - Deliver to WES</fullName>
            </value>
            <value>
                <fullName>DEQ - Del Ex Quay</fullName>
            </value>
            <value>
                <fullName>DES - Del Ex Ship</fullName>
            </value>
            <value>
                <fullName>EXW - Ex Works</fullName>
            </value>
            <value>
                <fullName>FAS - Free Alongside</fullName>
            </value>
            <value>
                <fullName>FCA - Free Carrier</fullName>
            </value>
            <value>
                <fullName>FOB - Free On Board</fullName>
            </value>
            <value>
                <fullName>As mentioned below</fullName>
            </value>
            <value>
                <fullName>N/A - Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>