wier/force-app/main/default/objects/COA__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <label>Fax #</label>
    <type>Phone</type>
</CustomField>