wier/force-app/main/default/objects/COA__c/fields/For_Review__c.field-meta.xml
<CustomField>
    <fullName>For_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Review</label>
    <type>Checkbox</type>
</CustomField>