wier/force-app/main/default/objects/COA__c/fields/Format_Date__c.field-meta.xml
<CustomField>
    <fullName>Format_Date__c</fullName>
    <formula>TEXT(DAY(Date__c))+&quot;/&quot; +TEXT(MONTH(Date__c))+&quot;/&quot; +TEXT(YEAR(Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Format Date</label>
    <type>Text</type>
</CustomField>