wier/force-app/main/default/objects/COA__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <defaultValue>&apos;Contract Administration Dept&apos;</defaultValue>
    <label>From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>