wier/force-app/main/default/objects/COA__c/fields/opportunity__c.field-meta.xml
<CustomField>
    <fullName>opportunity__c</fullName>
    <label>opportunity</label>
    <referenceTo>COpportunity__c</referenceTo>
    <relationshipLabel>Customer Order Acknowledgement</relationshipLabel>
    <relationshipName>Customer_Order_Acknowledgement</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>