wier/force-app/main/default/objects/COA__c/fields/Please_Comment__c.field-meta.xml
<CustomField>
    <fullName>Please_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Please Comment</label>
    <type>Checkbox</type>
</CustomField>