wier/force-app/main/default/objects/COA__c/fields/Please_Reply__c.field-meta.xml
<CustomField>
    <fullName>Please_Reply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Please Reply</label>
    <type>Checkbox</type>
</CustomField>