wier/force-app/main/default/objects/COA__c/fields/Ref__c.field-meta.xml
<CustomField>
    <fullName>Ref__c</fullName>
    <label>Ref.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>