wier/force-app/main/default/objects/COA__c/fields/Scheduled_order_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_order_delivery_date__c</fullName>
    <label>Scheduled order delivery date</label>
    <type>Date</type>
</CustomField>