wier/force-app/main/default/objects/COA__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <defaultValue>&apos;Order Acknowledgement&apos;</defaultValue>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>