wier/force-app/main/default/objects/COA__c/fields/Tel__c.field-meta.xml
<CustomField>
    <fullName>Tel__c</fullName>
    <label>Tel #</label>
    <type>Phone</type>
</CustomField>