wier/force-app/main/default/objects/COA__c/fields/Urgent__c.field-meta.xml
<CustomField>
    <fullName>Urgent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send acknowledgement to customer</description>
    <label>Ack to cust:only if WeirDxb legal entity</label>
    <type>Checkbox</type>
</CustomField>