wier/force-app/main/default/objects/COA__c/fields/Weir_contact_for_the_order__c.field-meta.xml
<CustomField>
    <fullName>Weir_contact_for_the_order__c</fullName>
    <defaultValue>$User.FirstName +&apos; &apos;+ $User.LastName</defaultValue>
    <label>Weir contact person for the order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>