wier/force-app/main/default/objects/COA__c/fields/Weir_contact_person_s_email__c.field-meta.xml
<CustomField>
    <fullName>Weir_contact_person_s_email__c</fullName>
    <label>Weir contact person&apos;s email</label>
    <type>Email</type>
</CustomField>