wier/force-app/main/default/objects/COA__c/fields/Weir_contact_person_s_telephone__c.field-meta.xml
<CustomField>
    <fullName>Weir_contact_person_s_telephone__c</fullName>
    <label>Weir contact person&apos;s telephone</label>
    <type>Phone</type>
</CustomField>