wier/force-app/main/default/objects/COA__c/fields/Wesco_Job__c.field-meta.xml
<CustomField>
    <fullName>Wesco_Job__c</fullName>
    <label>Job #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>