wier/force-app/main/default/objects/COA__c/fields/Your_contact_for_this_order_is__c.field-meta.xml
<CustomField>
    <fullName>Your_contact_for_this_order_is__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Your contact for this order is</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Order_Acknowledgement</relationshipName>
    <type>Lookup</type>
</CustomField>