wier/force-app/main/default/objects/COA__c/validationRules/Job_Update_locked_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Update_locked_validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISNEW(),IF( opportunity__r.Jod_Update_locked__c ==FALSE,TRUE,FALSE),FALSE)</errorConditionFormula>
    <errorMessage>You can&apos;t proceed with customer order acknowledgement unless dates advised by Planning are locked in &apos;Job Update&apos; section.</errorMessage>
</ValidationRule>