wier/force-app/main/default/objects/COA__c/validationRules/Schedule_order_delivery_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Schedule_order_delivery_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Scheduled_order_delivery_date__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Scheduled_order_delivery_date__c</errorDisplayField>
    <errorMessage>You can select a date only on or after order acknowledgement date.</errorMessage>
</ValidationRule>